feat: Add heartbeat checkin, import and export scripts (#9)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ packages = [{include = "opsduty_python", from = "src"}]
 opsduty = 'opsduty_python.cli.__main__:opsduty'
 
 [tool.poetry.dependencies]
-opsduty-client = "^0.0.2"
+opsduty-client = "^0.0.3a2"
 python = ">=3.11,<3.13"
 requests = ">=2.32,<3"
 urllib3 = ">=2.2.2,<3"
 click = ">=8.1.7,<9"
-structlog = ">=24.4.0,<=25"
+structlog = ">=24.4.0,<25"
+pydantic = ">=2.9.2,<3"
+pydantic-yaml = ">=1.3.0,<2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
