--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ ruff = "^0.5.1"
 black = "^24.4.2"
 mypy = "^1.10.1"
 types-requests = "^2.32.0.20240712"
+types-python-dateutil = "^2.9.0.20241003"
 
 [build-system]
 requires = ["poetry-core"]
