Fix bump opsduty-python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ packages = [{include = "opsduty_python", from = "src"}]
 opsduty = 'opsduty_python.cli.__main__:opsduty'
 
 [tool.poetry.dependencies]
-opsduty-client = "^0.0.3a2"
-python = ">=3.11,<3.13"
+opsduty-client = "^0.0.5"
+python = ">=3.11,<3.14"
 requests = ">=2.32,<3"
 urllib3 = ">=2.2.2,<3"
 click = ">=8.1.7,<9"
