--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ opsduty = 'opsduty_python.cli.__main__:opsduty'
 [tool.poetry.dependencies]
 opsduty-client = "^0.0.5"
 python = ">=3.11,<3.14"
-requests = ">=2.32,<3"
-urllib3 = ">=2.2.2,<3"
 click = ">=8.1.7,<9"
-structlog = ">=24.4.0,<25"
 pydantic = ">=2.8,<3"
 pydantic-yaml = ">=1.3.0,<2"
+requests = ">=2.32,<3"
+structlog = "*"
+urllib3 = ">=2.2.2,<3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
